--- a/main.css
+++ b/main.css
@@ -19,10 +19,17 @@ body {
   right: 0;
 }
 
+#searchbar {
+  font-family: 9px;
+  font-size: 10px;
+}
+
 #gmail {
   max-width: 45px;
   margin-left: 325px;
   background-color: red;
+  position: relative;
+  top: 20px;
 }
 
 #images {
@@ -30,9 +37,11 @@ body {
   max-width: 45px;
   margin-left: 400px;
   background-color: red;
+  position: relative;
+  top: 2px;
 }
 
-.center {
+.logo {
     display: block;
     margin-left: auto;
     margin-right: auto;
@@ -40,14 +49,40 @@ body {
     padding-top: 109px;
     height: 92px;
     width: 272px;
+    position: relative;
+    top: 60px;
 }
 
-.search {
-    padding-bottom: 2px;
-    padding-top: 3px;
-    margin-top: -3px;
-    width: 632px;
-    position: relative;
+.searchBar {
+  width: 400px;
+  height: 40px;
+  padding-bottom: 2px;
+  padding-top: 3px;
+  margin-top: -3px;
+  width: 632px;
+  position: relative;
+  right: 160px;
+  top: 120px;
+  border: 1px #eaeaea solid;
+
+}
+
+.buttons {
+  position: relative;
+  top: 150px;
+  left: 600px;
+
+}
+
+.buttons button {
+  display:inline-block;
+   margin: 5px;
+   background-color: #f4f4f4;
+   height: 36px;
+   line-height: 27px;
+   border-radius: 2px;
+   font-size: 13px;
+   font-weight: bold;
 }
 
 .sbib_b {
@@ -56,6 +91,14 @@ body {
     height: 100%;
     overflow: hidden;
     padding: 6px 9px 0;
+}
+
+footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 83px;
+  background-color: red;
 }
 
 form {
