--- a/main.css
+++ b/main.css
@@ -1,5 +1,6 @@
 body {
   margin: 0;
+  width: 100%
 }
 
 #main {
@@ -52,7 +53,33 @@ body {
   top: -9px;
 }
 
-.logo {
+#notificationsLogo {
+  height: 19px;
+  width: 19px;
+  position: relative;
+  left: 501px;
+  bottom: 15px;
+  top: -34px;
+}
+
+#accountLogo {
+  height: 32px;
+  width: 32px;
+  position: relative;
+  left: 540px;
+  bottom: 15px;
+  top: -64px;
+}
+
+#voiceLogo {
+  height: 28px;
+  width: 19px;
+  position: relative;
+  top: 80px;
+  left: 345px;
+}
+
+.googleLogo {
     display: block;
     margin-left: auto;
     margin-right: auto;
@@ -61,7 +88,7 @@ body {
     height: 92px;
     width: 272px;
     position: relative;
-    top: 60px;
+    top: 89px;
 }
 
 .searchBar {
@@ -70,16 +97,17 @@ body {
   padding-bottom: 2px;
   padding-top: 3px;
   margin-top: -3px;
-  width: 632px;
+  width: 580px;
   position: relative;
-  right: 160px;
+  right: 159px;
   top: 120px;
   border: 1px #eaeaea solid;
-
+  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.16), 0 0 0 1px rgba(0,0,0,0.08);
 }
 
 .buttons {
   position: relative;
+  width: 600px;
   top: 150px;
   left: 600px;
 
@@ -94,6 +122,8 @@ body {
    border-radius: 2px;
    font-size: 13px;
    font-weight: bold;
+   position: relative;
+   right: 20px;
 }
 
 .sbib_b {
@@ -109,7 +139,7 @@ footer {
   bottom: 0;
   width: 100%;
   height: 83px;
-  background-color: red;
+  background-color:rgb(242, 242, 242, 1);
 }
 
 form {
