--- a/main.css
+++ b/main.css
@@ -79,6 +79,21 @@ body {
   left: 345px;
 }
 
+#footerDiv {
+    font-family: arial, sans-sarif;
+  color: #666;
+  border-bottom: 1px solid #e4e4e4;
+  margin-left: 30px;
+  text-align: left;
+  padding-bottom: 19px;
+}
+
+#footerDiv2 {
+  color: #666;
+  font-family: arial, sans-sarif;
+  font-size: small;
+}
+
 .googleLogo {
     display: block;
     margin-left: auto;
@@ -124,6 +139,7 @@ body {
    font-weight: bold;
    position: relative;
    right: 20px;
+   color: #757575;
 }
 
 .sbib_b {
@@ -140,6 +156,22 @@ footer {
   width: 100%;
   height: 83px;
   background-color:rgb(242, 242, 242, 1);
+}
+
+#footerDiv {
+  top: 4px;
+}
+
+#footerLeft li {
+ display: inline-block;
+ list-style-type: none;
+}
+
+#footerRight li {
+  position: absolute;
+  display: inline-block;
+  list-style-type: none;
+  position: right;
 }
 
 form {
